# static-frame-pyodide

./: LICENSE  README.md  pyproject.toml  requirements-build.txt  requirements~build.txt  tasks.py  test.py
static_frame_pyodide/: __init__.py
